fix(tmux): update work tmuxinator config for monterey-ai-monorepo
Update root directory path and modify window configurations to match the new project structure.
Add windows for workers, storybook, and database access.
Replace pnpm dev command with nr dev for server window.

--- a/roles/tmux/files/tmuxinator/work.yml
+++ b/roles/tmux/files/tmuxinator/work.yml
@@ -1,7 +1,7 @@
 # /Users/hogan.mcdonald/.config/tmuxinator/work.yml
 
 name: work
-root: ~/reforge-copilot
+root: ~/monterey-ai-monorepo/
 
 # Optional tmux socket
 # socket_name: foo
@@ -58,5 +58,8 @@ root: ~/reforge-copilot
 #
 windows:
   - nvim: nvim
+  - server: nr dev
+  - workers: nr workers:dev
+  - storybook: nr storybook
+  - database: mycli -d dev
   - zsh: ~
-  - server: pnpm dev
