feat(sketchybar): implement clock component and refactor bar configuration
- Add new clock component with proper styling and formatting
- Refactor bar initialization to use modular component system
- Update clock.sh plugin to display time in improved format

fix(aerospace): update keyboard shortcuts for layout management
- Change layout tiles shortcut from cmd-shift-ctrl-alt-slash to cmd-shift-ctrl-alt-t
- Change layout accordion shortcut from cmd-shift-ctrl-alt-comma to cmd-shift-ctrl-alt-a

chore(tmux): simplify work environment configuration
- Combine server and workers windows into single turbo window

--- a/roles/aerospace/files/aerospace.toml
+++ b/roles/aerospace/files/aerospace.toml
@@ -153,8 +153,8 @@ cmd-shift-ctrl-alt-equal = 'resize smart +50'
 cmd-shift-ctrl-alt-g = 'mode join'
 
 ### --- Layouts ---
-cmd-shift-ctrl-alt-slash = 'layout tiles horizontal vertical'
-cmd-shift-ctrl-alt-comma = 'layout accordion horizontal vertical'
+cmd-shift-ctrl-alt-t = 'layout tiles horizontal vertical'
+cmd-shift-ctrl-alt-a = 'layout accordion horizontal vertical'
 cmd-shift-ctrl-alt-space = 'layout floating tiling'
 
 ### --- Fullscreen ---
