feat(git): add git-review script for city worktree management
Add a new git-review script that allows checking out branches from city worktrees
into the main clone while preserving uncommitted changes. The script:

- Handles WIP changes in both source and destination
- Adds proper error handling and validation
- Maintains idempotent behavior when already on target branch
- Updates symlink configuration in Ansible tasks
- Adds a new git alias 'review' in gitconfig

The script assumes a specific directory structure with conductor/repo organization.

--- a/roles/git/tasks/main.yml
+++ b/roles/git/tasks/main.yml
@@ -32,7 +32,6 @@
   file:
     src: "{{ dotfiles_home }}/roles/git/files/git-branch-stats.link"
     dest: "{{ dotfiles_user_home }}/.bin/git-branch-stats.sh"
-    mode: a+x
     state: link
     force: yes
 
@@ -40,7 +39,6 @@
   file:
     src: "{{ dotfiles_home }}/roles/git/files/git-copy-branch.link"
     dest: "{{ dotfiles_user_home }}/.bin/git-copy-branch.sh"
-    mode: a+x
     state: link
     force: yes
 
@@ -48,6 +46,12 @@
   file:
     src: "{{ dotfiles_home }}/roles/git/files/git-delete-branches.link"
     dest: "{{ dotfiles_user_home }}/.bin/git-delete-branches.sh"
-    mode: a+x
+    state: link
+    force: yes
+
+- name: Link review script
+  file:
+    src: "{{ dotfiles_home }}/roles/git/files/git-review.link"
+    dest: "{{ dotfiles_user_home }}/.bin/git-review"
     state: link
     force: yes
