feat(tools): add Claude CLI, Helix editor, and replace Raycast with Sol
This commit adds several new development tools to the dotfiles:

1. Added Claude CLI with custom agents for product management, QA, and system architecture
2. Added Helix editor with comprehensive configuration files
3. Replaced Raycast with Sol launcher (open-source alternative)
4. Improved Karabiner configuration with restart handlers and validation

The commit also updates documentation in CLAUDE.md to reflect the Sol launcher change.

--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -34,9 +34,15 @@
     - role: mcp-hub
       tags:
         - mcp-hub
+    - role: claude
+      tags:
+        - claude
     - role: neovim
       tags:
         - neovim
+    - role: helix
+      tags:
+        - helix
 
 
     # ====================
@@ -54,6 +60,9 @@
     - role: ghostty
       tags:
         - ghostty
+    - role: sol
+      tags:
+        - sol
 
 
     # ====================
