--- a/roles/sol/tasks/main.yml
+++ b/roles/sol/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
-- name: Install Raycast
+- name: Install Sol
   community.general.homebrew_cask:
-    name: raycast
+    name: sol
     state: present
 
 - name: Disable Spotlight keyboard shortcut
@@ -15,13 +15,13 @@
     -c "Add :AppleSymbolicHotKeys:64:value:parameters: integer 1048576" \
     -c "Add :AppleSymbolicHotKeys:64:type string standard"
   args:
-    creates: "~/.config/raycast_setup_complete"
+    creates: "~/.config/sol_setup_complete"
   ignore_errors: yes
   register: spotlight_disable
 
 - name: Create flag file to prevent rerunning spotlight commands
   file:
-    path: "~/.config/raycast_setup_complete"
+    path: "~/.config/sol_setup_complete"
     state: touch
   when: spotlight_disable.rc is defined and spotlight_disable.rc == 0
 
@@ -37,7 +37,7 @@
 - name: Notify user about manual steps
   debug:
     msg: >
-      Raycast installed successfully. You'll need to manually:
-      1. Launch Raycast and set it to start at login
-      2. Set the activation hotkey to Cmd+Space
-      3. Enable permissions during first launch
+      Sol installed successfully. You'll need to manually:
+      1. Launch Sol and configure it to start at login
+      2. Set the activation hotkey to Cmd+Space (or your preferred shortcut)
+      3. Grant necessary permissions during first launch
