--- a/roles/helix/files/config.toml
+++ b/roles/helix/files/config.toml
@@ -1,4 +1,4 @@
-theme = "catppuccin_macchiato"
+theme = "catppuccin_frappe"
 
 [editor]
 line-number = "relative"
@@ -8,7 +8,7 @@ scroll-lines = 3
 shell = ["zsh", "-c"]
 text-width = 100
 true-color = true
-rulers = [80, 120]
+rulers = []
 bufferline = "always"
 color-modes = true
 
@@ -27,6 +27,10 @@ auto-signature-help = true
 display-inlay-hints = true
 display-signature-help-docs = true
 snippets = true
+
+[editor.inline-diagnostics]
+cursor-line = "warning"
+other-lines = "warning"
 
 [editor.cursor-shape]
 insert = "bar"
@@ -56,7 +60,7 @@ smart-case = true
 wrap-around = true
 
 [editor.whitespace]
-render = "all"
+render = "none"
 characters = { space = "·", nbsp = "⍽", tab = "→", newline = "⏎" }
 
 [editor.indent-guides]
@@ -64,48 +68,48 @@ render = true
 character = "┊"
 skip-levels = 1
 
-[keys.normal]
-# Quick save
-C-s = ":w"
-
-# Better window navigation
-C-h = "jump_view_left"
-C-j = "jump_view_down"
-C-k = "jump_view_up"
-C-l = "jump_view_right"
-
-# File picker
-C-p = "file_picker_in_current_directory"
-
-# Buffer navigation
-"A-h" = "goto_previous_buffer"
-"A-l" = "goto_next_buffer"
-
-# LSP shortcuts
-"g d" = "goto_definition"
-"g r" = "goto_references"
-"g i" = "goto_implementation"
-"g t" = "goto_type_definition"
-"K" = "hover"
-"space l a" = "code_action"
-"space l r" = "rename_symbol"
-"space l f" = "format_selections"
-
-# Diagnostics
-"[d" = "goto_prev_diag"
-"]d" = "goto_next_diag"
-"space d" = "diagnostics_picker"
-
-# Git integration
-"space g s" = ":sh git status"
-"space g l" = ":sh git log --oneline -10"
-
-[keys.insert]
-# Exit insert mode
-"j k" = "normal_mode"
-"k j" = "normal_mode"
-
-[keys.select]
-# Exit select mode
-"j k" = "normal_mode"
-"k j" = "normal_mode"
+# [keys.normal]
+# # Quick save
+# C-s = ":w"
+#
+# # Better window navigation
+# C-h = "jump_view_left"
+# C-j = "jump_view_down"
+# C-k = "jump_view_up"
+# C-l = "jump_view_right"
+#
+# # File picker
+# C-p = "file_picker_in_current_directory"
+#
+# # Buffer navigation
+# "A-h" = "goto_previous_buffer"
+# "A-l" = "goto_next_buffer"
+#
+# # LSP shortcuts
+# "g d" = "goto_definition"
+# "g r" = "goto_references"
+# "g i" = "goto_implementation"
+# "g t" = "goto_type_definition"
+# "K" = "hover"
+# "space l a" = "code_action"
+# "space l r" = "rename_symbol"
+# "space l f" = "format_selections"
+#
+# # Diagnostics
+# "[d" = "goto_prev_diag"
+# "]d" = "goto_next_diag"
+# "space d" = "diagnostics_picker"
+#
+# # Git integration
+# "space g s" = ":sh git status"
+# "space g l" = ":sh git log --oneline -10"
+#
+# [keys.insert]
+# # Exit insert mode
+# "j k" = "normal_mode"
+# "k j" = "normal_mode"
+#
+# [keys.select]
+# # Exit select mode
+# "j k" = "normal_mode"
+# "k j" = "normal_mode"
