feat(git): replace diff-so-fancy with delta and add tmux lazygit popup
- Switch from diff-so-fancy to delta for git diff/show paging
- Configure delta with side-by-side diffs and line numbers
- Update lazygit config to use delta for paging
- Remove lazycommit integration
- Add tmux keybinding (Ctrl-g) to open lazygit in a popup
- Increase ghostty background opacity from 0.8 to 0.9

--- a/roles/tmux/files/tmux/keymaps.conf
+++ b/roles/tmux/files/tmux/keymaps.conf
@@ -61,3 +61,6 @@ bind s choose-session
 # other random key-binding changes
 bind x kill-pane
 bind t set status
+
+# Ctrl-g → open a centered popup running lazygit
+bind-key -n C-g display-popup -E -w 90% -h 90% -S "border-style double" -d "#{pane_current_path}" lazygit
