refactor(helix): remove commented keybindings and add rust-analyzer config
- Remove unused commented keybinding configurations from config.toml
- Add rust-analyzer configuration with checkOnSave and cargo.allFeatures options

--- a/roles/helix/files/languages.toml
+++ b/roles/helix/files/languages.toml
@@ -3,6 +3,9 @@ name = "rust"
 auto-format = true
 formatter = { command = "rustfmt" }
 
+[language-server.rust-analyzer]
+config = { checkOnSave = true, cargo = { allFeatures = true }}
+
 [[language]]
 name = "go"
 auto-format = true
