feat: add zellij terminal workspace manager
- Add zellij to README with description and keybinding details
- Create new zellij role in Ansible playbook
- Replace diff-so-fancy with git-delta for improved diff viewing

This adds support for zellij, a modern terminal workspace manager
written in Rust with vim-like keybindings and advanced features.

--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -43,6 +43,9 @@
     - role: helix
       tags:
         - helix
+    - role: zellij
+      tags:
+        - zellij
 
 
     # ====================
