feat(tmux): updates tmux to use new colorscheme

--- a/roles/tmux/files/tmux.conf
+++ b/roles/tmux/files/tmux.conf
@@ -2,9 +2,9 @@ source-file ~/.config/tmux/layout.conf
 source-file ~/.config/tmux/keymaps.conf
 
 # ====================
-#   Reload keymap Config
+#   Reload Config
 # ====================
-bind r source-file ~/.config/tmux/keymaps.conf
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded!"
 
 
 # ====================
@@ -35,3 +35,24 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -g default-terminal "${TERM}"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+
+# ====================
+#   Custom Status Bar Theme
+# ====================
+# Note: Status bar layout and format are defined in layout.conf
+# This section only sets colors for elements not styled in layout.conf
+
+# Message colors
+set -g message-style "bg=default,fg=#89b4fa"
+set -g message-command-style "bg=default,fg=#89b4fa"
+
+# Activity styles
+set -g window-status-activity-style "bg=default,fg=#f9e2af"
+
+# ====================
+#   TPM Plugin Manager
+# ====================
+set -g @plugin 'tmux-plugins/tpm'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
