--- a/roles/tmux/files/tmux/layout.conf
+++ b/roles/tmux/files/tmux/layout.conf
@@ -1,28 +1,33 @@
-set -g status-style bg=#1d2433
-set -Fg 'status-format[1]' '#{status-format[0]}'
-set -g 'status-format[0]' ''
+# ====================
+#   Layout (Catppuccin Mocha)
+# ====================
+# Using Catppuccin Mocha color palette
 set -g status 3
-set -g pane-border-style fg=#2f3b54
-set -g pane-active-border-style fg=#2f3b54
+set -g status-style bg=default
+set -g 'status-format[0]' ''
+set -g 'status-format[1]' '#[align=left range=left #{status-left-style}]#[push-default]#{T;=/#{status-left-length}:status-left}#[pop-default]#[norange default]#[list=on align=#{status-justify}]#[list=left-marker]<#[list=right-marker]>#[list=on]#{W:#[range=window|#{window_index} #{window-status-style}#{?#{&&:#{window_last_flag},#{!=:#{window-status-last-style},default}}, #{window-status-last-style},}#{?#{&&:#{window_bell_flag},#{!=:#{window-status-bell-style},default}}, #{window-status-bell-style},#{?#{&&:#{||:#{window_activity_flag},#{window_silence_flag}},#{!=:#{window-status-activity-style},default}}, #{window-status-activity-style},}}]#[push-default]#{T:window-status-format}#[pop-default]#[norange default]#{?window_end_flag,,#{window-status-separator}},#[range=window|#{window_index} list=focus #{?#{!=:#{window-status-current-style},default},#{window-status-current-style},#{window-status-style}}#{?#{&&:#{window_last_flag},#{!=:#{window-status-last-style},default}}, #{window-status-last-style},}#{?#{&&:#{window_bell_flag},#{!=:#{window-status-bell-style},default}}, #{window-status-bell-style},#{?#{&&:#{||:#{window_activity_flag},#{window_silence_flag}},#{!=:#{window-status-activity-style},default}}, #{window-status-activity-style},}}]#[push-default]#{T:window-status-current-format}#[pop-default]#[norange list=on default]#{?window_end_flag,,#{window-status-separator}}}#[nolist align=right range=right #{status-right-style}]#[push-default]#{T;=/#{status-right-length}:status-right}#[pop-default]#[norange default]'
+set -g 'status-format[2]' ''
+set -g pane-border-style fg=#313244
+set -g pane-active-border-style fg=#313244
 
 
 
 # Status Left
 set -g status-left '  ⏺    '
-set -g status-left-style bg=#1d2433
-set -g status-left-style fg=#c3a6ff
+set -g status-left-style bg=default
+set -g status-left-style fg=#cba6f7
 
 
 
 # Window List
 set -g window-status-format ' #W '
-set -g window-status-style 'fg=#6679a4 bg=#1d2433'
-setw -g window-status-current-format '#{?window_zoomed_flag,#[bg=#ffcc66],} #W '
-setw -g window-status-current-style fg=#ffcc66
+set -g window-status-style 'fg=#89b4fa bg=default'
+setw -g window-status-current-format '#{?window_zoomed_flag,#[bg=#f9e2af],} #W '
+setw -g window-status-current-style fg=#f9e2af
 
 
 
 # Status Right
 set -g status-right-length 80
-CLOCK='#[fg=#8695b7]#(date +%I)#[fg=#2f3b54]:#[fg=#8695b7]#(date +%M) #(if [ `date +%p` = "AM" ]; then echo \#[fg=colour3]; else echo \#[fg=#8695b7]; fi)#(date +%p)'
+CLOCK='#[fg=#bac2de]#(date +%I)#[fg=#313244]:#[fg=#bac2de]#(date +%M) #(if [ `date +%p` = "AM" ]; then echo \#[fg=#f9e2af]; else echo \#[fg=#bac2de]; fi)#(date +%p)'
 set -g status-right "$CLOCK  "
