changes asdf global command

--- a/roles/javascript/tasks/main.yml
+++ b/roles/javascript/tasks/main.yml
@@ -8,7 +8,7 @@
   loop: "{{versions}}"
 
 - name: Set global version for node to {{versions[0]}}
-  command: "asdf global nodejs {{versions[0]}}"
+  command: "asdf set nodejs {{versions[0]}}"
 
 - name: Install "yarn" node.js package globally
   npm:
