removes all asdf global commands

--- a/roles/neovim/tasks/main.yml
+++ b/roles/neovim/tasks/main.yml
@@ -10,7 +10,7 @@
   command: asdf install neovim nightly
 
 - name: Set nightly as the global neovim version
-  command: asdf global neovim nightly
+  command: asdf set neovim nightly
 
 - name: Make sure config is up to date
   file:
@@ -23,10 +23,10 @@
   ansible.builtin.include_vars:
     file: "{{ dotfiles_home }}/vault/neovim_env_vars.yml"
     name: env_vars
-  no_log: false  # Avoid logging sensitive information
+  no_log: false # Avoid logging sensitive information
 
 - name: Create Neovim .env file with secure tokens
   ansible.builtin.template:
     src: neovim_env_template.j2
     dest: "{{ config }}/nvim/.env"
-    mode: '0600'  # Ensure only the user has access to the .env file
+    mode: "0600" # Ensure only the user has access to the .env file
