feat(ghostty): adds shift+enter config to ghostty

--- a/roles/ghostty/files/config
+++ b/roles/ghostty/files/config
@@ -31,3 +31,4 @@ keybind = ctrl+h=unbind
 keybind = ctrl+j=unbind
 keybind = ctrl+k=unbind
 keybind = ctrl+l=unbind
+keybind = shift+enter=text:\x1b\r
