--- a/roles/ghostty/files/config
+++ b/roles/ghostty/files/config
@@ -1,6 +1,6 @@
 theme               = Catppuccin Mocha
-background-opacity  = 0.85
-background-blur     = true
+background-opacity  = 0.55
+background-blur     = 50
 
 macos-titlebar-style = hidden
 mouse-hide-while-typing = true
