feat: adds hex dev deps

--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -22,6 +22,9 @@
     - role: asdf
       tags:
         - asdf
+    - role: devbox
+      tags:
+        - devbox
     - role: JavaScript
       tags:
         - javascript
